--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.10,<4.0"
 geopandas = "^1.0.1"
 plotly = "^5.24.1"
 ipykernel = "^6.29.5"
@@ -25,6 +25,8 @@ python-dotenv = "^1.0.1"
 mkdocs-plotly-plugin = "^0.1.3"
 mkdocstrings = "^0.26.1"
 mkdocstrings-python = "^1.11.1"
+rasterio = "^1.4.1"
+treescope = "^0.1.5"
 
 [tool.poetry.dev-dependencies]
 # formatting, quality, tests
